--- a/css/particles.css
+++ b/css/particles.css
@@ -1,7 +1,7 @@
 #particles-js {
-    background: #000000;
-      width:50%;
-      height: 50%;
+    background: #1D0254;
+      width:100%;
+      height: 100%;
       position: fixed;
       z-index: -10;
       top: 0;
